salesforce/objects/AI_Search_Config__mdt.object
<CustomObject>
    <label>AI Search Config</label>
    <pluralLabel>AI Search Configs</pluralLabel>
    <fields>
        <fullName>Ingest_Endpoint__c</fullName>
        <label>Ingest Endpoint</label>
        <type>Url</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <type>Text</type>
        <length>255</length>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <type>Number</type>
        <precision>4</precision>
        <scale>0</scale>
        <defaultValue>200</defaultValue>
    </fields>
    <fields>
        <fullName>Hours_Back__c</fullName>
        <label>Hours Back</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>0</scale>
        <defaultValue>24</defaultValue>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <label>Enabled</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>
</CustomObject>